# tho3ban

./: CMakeLists.txt  README.md
scripts/: run.ps1
src/: main.cpp  main_cli.cpp
src/core/: apple.cpp  apple.h  game.cpp  game.h  menu.cpp  menu.h  snake.cpp  snake.h  types.cpp  types.h
